--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -32,6 +32,7 @@ services:
       context: .
       dockerfile: Dockerfile
     container_name: daal-wallet
+    restart: unless-stopped
     environment:
       DB_HOST: mysql
       DB_PORT: 3306
